Impossible to select a joint in stick bone mode #43303

Closed
opened 2015-01-18 00:19:20 +01:00 by Daniel Salazar · 9 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC
AMD FX-8350

Blender Version

Broken: 6e97db7

Short description of error

The stick bone visualization mode makes it very hard or sometimes impossible to select a joint in the middle of two bones. This is related to an existing selection of one of the two bones. If no bone is pre-selected then it's hard but not impossible to select the joint.

Exact steps for others to reproduce the error

Try to select the middle joint

impossible_select.blend

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC AMD FX-8350 **Blender Version** Broken: 6e97db7 **Short description of error** The stick bone visualization mode makes it very hard or sometimes impossible to select a joint in the middle of two bones. This is related to an existing selection of one of the two bones. If no bone is pre-selected then it's hard but not impossible to select the joint. **Exact steps for others to reproduce the error** Try to select the middle joint [impossible_select.blend](https://archive.blender.org/developer/F137834/impossible_select.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Added subscribers: @Psy-Fi, @JulianEisel

Added subscribers: @Psy-Fi, @JulianEisel
Member

Hmm, not sure but looks like this is a bit too fancy for our selection code :/ @Psy-Fi, how do you think about that?

Hmm, not sure but looks like this is a bit too fancy for our selection code :/ @Psy-Fi, how do you think about that?
Member

Would say this is low prio though, as it's easy doable if you select both bones first and then the middle points.

Would say this is low prio though, as it's easy doable if you select both bones first and then the middle points.
Antonis Ryakiotakis self-assigned this 2015-01-18 13:36:07 +01:00

It's fixable I think I'll take a look

It's fixable I think I'll take a look

This issue was referenced by 0aa258117d

This issue was referenced by 0aa258117d52cf09530e1ff30837f697f3bb8307

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0aa258117d.

Closed by commit 0aa258117d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43303
No description provided.